--- a/app/src/main/res/layout/widget_number_picker.xml
+++ b/app/src/main/res/layout/widget_number_picker.xml
@@ -1,29 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center">
-
-    <Button
-        android:id="@+id/btnDecrease"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:text="-"
-        android:background="@drawable/fab_reject"/>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal">
 
     <TextView
-        android:id="@+id/txtNumber"
-        android:layout_width="40dp"
+        android:id="@+id/txtTitle"
+        android:layout_marginBottom="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:text="3"/>
+        android:text="Attribute"/>
 
-    <Button
-        android:id="@+id/btnIncrease"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:text="+"
-        android:background="@drawable/fab_accept"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnDecrease"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:text="-"
+            android:background="@drawable/fab_reject"/>
+
+        <TextView
+            android:id="@+id/txtNumber"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="3"/>
+
+        <Button
+            android:id="@+id/btnIncrease"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:text="+"
+            android:background="@drawable/fab_accept"/>
+    </LinearLayout>
 </LinearLayout>
