--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,53 @@
     android:fitsSystemWindows="true"
     tools:context="com.emi.nwodcombat.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
+    <ScrollView
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    </android.support.design.widget.AppBarLayout>
+            <android.support.design.widget.AppBarLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:theme="@style/AppTheme.AppBarOverlay">
 
-    <include layout="@layout/content_main"/>
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+            </android.support.design.widget.AppBarLayout>
+
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                      xmlns:tools="http://schemas.android.com/tools"
+                      xmlns:app="http://schemas.android.com/apk/res-auto"
+                      android:id="@+id/attackerFragment"
+                      android:name="com.emi.nwodcombat.diceroller.CompositeDiceRollerFragment"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                      tools:layout="@layout/fragment_dice_roller_composite"
+                      app:actorTag="Attacker"/>
+
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                      xmlns:tools="http://schemas.android.com/tools"
+                      xmlns:app="http://schemas.android.com/apk/res-auto"
+                      android:id="@+id/defenderFragment"
+                      android:name="com.emi.nwodcombat.diceroller.CompositeDiceRollerFragment"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                      tools:layout="@layout/fragment_dice_roller_composite"
+                      app:actorTag="Defender"/>
+
+        </LinearLayout>
+    </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
