--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,7 @@
         <attr name="minimumValue" format="integer" />
         <attr name="maximumValue" format="integer" />
     </declare-styleable>
+    <declare-styleable name="CompositeDiceRollerFragment">
+        <attr name="actorTag" format="string" />
+    </declare-styleable>
 </resources>
