--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,9 +35,10 @@
                       xmlns:tools="http://schemas.android.com/tools"
                       xmlns:app="http://schemas.android.com/apk/res-auto"
                       android:id="@+id/attackerFragment"
-                      android:name="com.emi.nwodcombat.diceroller.CompositeDiceRollerFragment"
+                      android:name="com.emi.nwodcombat.diceroller.mvp.CompositeDiceRollerFragment"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
+                      android:tag="@string/fragment_attacker"
                       app:layout_behavior="@string/appbar_scrolling_view_behavior"
                       tools:layout="@layout/fragment_dice_roller_composite"
                       app:actorTag="Attacker"/>
@@ -46,9 +47,10 @@
                       xmlns:tools="http://schemas.android.com/tools"
                       xmlns:app="http://schemas.android.com/apk/res-auto"
                       android:id="@+id/defenderFragment"
-                      android:name="com.emi.nwodcombat.diceroller.CompositeDiceRollerFragment"
+                      android:name="com.emi.nwodcombat.diceroller.mvp.CompositeDiceRollerFragment"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
+                      android:tag="@string/fragment_defender"
                       app:layout_behavior="@string/appbar_scrolling_view_behavior"
                       tools:layout="@layout/fragment_dice_roller_composite"
                       app:actorTag="Defender"/>
@@ -62,6 +64,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/die" />
 
 </android.support.design.widget.CoordinatorLayout>
