--- a/app/src/main/res/layout/fragment_combat.xml
+++ b/app/src/main/res/layout/fragment_combat.xml
@@ -26,72 +26,15 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvAttackerValues"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnSetAttackerThreshold"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp"
-                android:visibility="gone">
+                android:text="@string/rule_reroll_ten"/>
 
-                <LinearLayout
-                    android:id="@+id/panelAttackerAttribute"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/lblAttackerAttribute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Attribute"/>
-
-                    <LinearLayout
-                        android:id="@+id/diceAttackerAttribute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/panelAttackerSkill"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/lblAttackerSkill"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Skill"/>
-
-                    <LinearLayout
-                        android:id="@+id/diceAttackerSkill"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/panelAttackerWeapon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/lblAttackerWeapon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Weapon"/>
-
-                    <LinearLayout
-                        android:id="@+id/diceAttackerWeapon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" />
-                </LinearLayout>
-            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -117,71 +60,15 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvDefenderValues"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/btnSetDefenderThreshold"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp"
-                android:visibility="gone">
+                android:text="@string/rule_reroll_ten"/>
 
-                <LinearLayout
-                    android:id="@+id/panelDefenderAttribute"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/lblDefenderAttribute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Attribute"/>
-
-                    <LinearLayout
-                        android:id="@+id/diceDefenderAttribute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/panelDefenderSkill"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/lblDefenderSkill"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Skill"/>
-
-                    <LinearLayout
-                        android:id="@+id/diceDefenderSkill"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/panelDefenderWeapon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/lblDefenderWeapon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Weapon"/>
-
-                    <LinearLayout
-                        android:id="@+id/diceDefenderWeapon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal" />
-                </LinearLayout>
-            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
