--- a/app/src/main/res/layout/dialog_categories.xml
+++ b/app/src/main/res/layout/dialog_categories.xml
@@ -7,7 +7,7 @@
     <view
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/spacing_normal"
         class="android.support.v7.widget.RecyclerView"
         android:id="@+id/rvCategoryOptions" />
 
