--- a/app/src/main/res/layout/dialog_combat.xml
+++ b/app/src/main/res/layout/dialog_combat.xml
@@ -10,21 +10,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_attacker_pool"
-        android:layout_margin="15dp"/>
+        android:layout_margin="@dimen/spacing_large"/>
 
     <TextView
         android:id="@+id/txtDefense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_defender_pool"
-        android:layout_margin="15dp"/>
+        android:layout_margin="@dimen/spacing_large"/>
 
     <TextView
         android:id="@+id/lblAttackerRolls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_attacker_roll"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/spacing_large"
         android:layout_marginBottom="5dp"
         />
 
@@ -33,11 +33,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1, 5, 9, 9, 10, 7"
-        android:layout_marginBottom="15dp"/>
+        android:layout_marginBottom="@dimen/spacing_large"/>
 
     <TextView
         android:id="@+id/txtResult"
-        android:layout_margin="15dp"
+        android:layout_margin="@dimen/spacing_large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_attacker_result_failure"/>
