--- a/app/src/main/res/layout/row_value.xml
+++ b/app/src/main/res/layout/row_value.xml
@@ -4,12 +4,12 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_margin="10dp">
+              android:layout_margin="@dimen/spacing_normal">
     <TextView
         android:id="@+id/rowTxtName"
         android:text="Name:"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginRight="@dimen/spacing_normal"
+        android:layout_marginEnd="@dimen/spacing_normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
