--- a/app/src/main/res/layout/step_attr_categories.xml
+++ b/app/src/main/res/layout/step_attr_categories.xml
@@ -5,26 +5,104 @@
               android:layout_height="match_parent"
               android:gravity="center">
 
-    <Button
-        android:id="@+id/btnAttrMental"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/spacing_normal"
+        android:layout_marginBottom="@dimen/spacing_normal"
+        android:layout_marginStart="@dimen/spacing_xl"
+        android:layout_marginEnd="@dimen/spacing_xl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/categorize_mental_attributes"/>
+        android:layout_height="wrap_content">
+        
+        <TextView
+            android:id="@+id/lblMental"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cat_mental"/>
+        
+        <TextView
+            android:id="@+id/txtMental"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:visibility="invisible"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+        
+        <Button
+            android:id="@+id/btnSetMentalCategory"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/set"
+            android:layout_weight="1"/>
+        
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btnAttrPhysical"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/spacing_normal"
+        android:layout_marginBottom="@dimen/spacing_normal"
+        android:layout_marginStart="@dimen/spacing_xl"
+        android:layout_marginEnd="@dimen/spacing_xl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/categorize_physical_attributes"
-        />
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/btnAttrSocial"
+        <TextView
+            android:id="@+id/lblPhysical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cat_physical"/>
+
+        <TextView
+            android:id="@+id/txtPhysical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:visibility="invisible"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/btnSetPhysicalCategory"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/set"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/spacing_normal"
+        android:layout_marginBottom="@dimen/spacing_normal"
+        android:layout_marginStart="@dimen/spacing_xl"
+        android:layout_marginEnd="@dimen/spacing_xl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/categorize_social_attributes"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/lblSocial"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cat_social"/>
+
+        <TextView
+            android:id="@+id/txtSocial"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:visibility="invisible"
+            android:textAllCaps="true"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/btnSetSocialCategory"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/set"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </LinearLayout>
