--- a/app/src/main/res/layout/widget_number_picker.xml
+++ b/app/src/main/res/layout/widget_number_picker.xml
@@ -2,15 +2,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginTop="@dimen/spacing_normal"
+    android:layout_marginBottom="@dimen/spacing_normal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal">
 
     <TextView
         android:id="@+id/txtTitle"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/spacing_normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Attribute"/>
@@ -23,8 +23,8 @@
 
         <Button
             android:id="@+id/btnDecrease"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="@dimen/btn_nbpk"
+            android:layout_height="@dimen/btn_nbpk"
             android:text="@string/button_minus"
             android:background="@drawable/fab_reject"/>
 
@@ -38,8 +38,8 @@
 
         <Button
             android:id="@+id/btnIncrease"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="@dimen/btn_nbpk"
+            android:layout_height="@dimen/btn_nbpk"
             android:text="@string/button_plus"
             android:background="@drawable/fab_accept"/>
     </LinearLayout>
