--- a/app/src/main/res/layout/widget_value_setter.xml
+++ b/app/src/main/res/layout/widget_value_setter.xml
@@ -3,20 +3,37 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+              android:layout_marginStart="@dimen/spacing_normal"
+              android:layout_marginEnd="@dimen/spacing_normal"
+              android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/lblValue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:text="Value"/>
 
     <LinearLayout
         android:id="@+id/panelValue"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:orientation="horizontal" />
+        android:layout_weight="5"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+    </LinearLayout>
 
+    <Button
+        android:id="@+id/btnValueDecrease"
+        android:layout_width="@dimen/btn_value_setter"
+        android:layout_height="@dimen/btn_value_setter"
+        android:text="@string/button_minus"
+        android:background="@drawable/fab_reject"/>
+
+    <Button
+        android:id="@+id/btnValueIncrease"
+        android:layout_width="@dimen/btn_value_setter"
+        android:layout_height="@dimen/btn_value_setter"
+        android:text="@string/button_plus"
+        android:background="@drawable/fab_accept"/>
 </LinearLayout>
