Added summary step. Populates correctly. To do: enable 'finish' button and process addition to database.

--- a/app/src/main/res/layout/dialog_single_dice.xml
+++ b/app/src/main/res/layout/dialog_single_dice.xml
@@ -10,7 +10,7 @@
         android:id="@+id/nbpk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:widgetTitle="@string/nbpk_title_attribute"
+        app:widgetTitle="@string/title_attribute"
         app:maximum="10"
         app:minimum="1"/>
 
