Set default minimum value for ValueSetterWidget to 0.

--- a/app/src/main/res/layout/step_attr_set.xml
+++ b/app/src/main/res/layout/step_attr_set.xml
@@ -33,6 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:valueName="@string/attr_int"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_mental"
                 />
 
@@ -43,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/valueSetterInt"
                 app:valueName="@string/attr_wits"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_mental"
                 />
 
@@ -53,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/valueSetterWits"
                 app:valueName="@string/attr_res"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_mental"
                 />
         </RelativeLayout>
@@ -81,6 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:valueName="@string/attr_str"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_physical"
                 />
 
@@ -91,6 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/valueSetterStr"
                 app:valueName="@string/attr_dex"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_physical"
                 />
 
@@ -101,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/valueSetterDex"
                 app:valueName="@string/attr_sta"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_physical"
                 />
         </RelativeLayout>
@@ -129,6 +135,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:valueName="@string/attr_pre"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_social"
                 />
 
@@ -139,6 +146,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/valueSetterPre"
                 app:valueName="@string/attr_man"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_social"
                 />
 
@@ -149,6 +157,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/valueSetterMan"
                 app:valueName="@string/attr_com"
+                app:valueDefault="1"
                 app:traitCategory="@string/cat_social"
                 />
         </RelativeLayout>
