--- a/app/src/main/res/layout/step_attr_categories.xml
+++ b/app/src/main/res/layout/step_attr_categories.xml
@@ -33,7 +33,7 @@
             android:id="@+id/btnSetMentalAttrCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/set"
+            android:text="@string/button_set"
             android:layout_weight="1"/>
         
     </LinearLayout>
@@ -66,7 +66,7 @@
             android:id="@+id/btnSetPhysicalAttrCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/set"
+            android:text="@string/button_set"
             android:layout_weight="1"/>
     </LinearLayout>
 
@@ -98,7 +98,7 @@
             android:id="@+id/btnSetSocialAttrCategory"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/set"
+            android:text="@string/button_set"
             android:layout_weight="1"/>
     </LinearLayout>
 
