--- a/app/src/main/res/layout/step_personal_info.xml
+++ b/app/src/main/res/layout/step_personal_info.xml
@@ -70,12 +70,14 @@
                     android:layout_height="wrap_content"/>
 
                 <Spinner
+                    android:id="@+id/spinnerVirtue"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/spacing_half"
                     android:layout_weight="1"/>
 
                 <Button
+                    android:id="@+id/btnAddVirtue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/spacing_half"
@@ -95,12 +97,14 @@
                     android:layout_height="wrap_content"/>
 
                 <Spinner
+                    android:id="@+id/spinnerVice"
                     android:layout_width="0dp"
                     android:layout_margin="@dimen/spacing_half"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
 
                 <Button
+                    android:id="@+id/btnAddVice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/spacing_half"
