--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,4 +14,7 @@
         <attr name="valueMaximum" format="integer" />
         <attr name="traitCategory" format="string" />
     </declare-styleable>
+    <declare-styleable name="TypeFacedTextView">
+        <attr name="fontName" format="string" />
+    </declare-styleable>
 </resources>
