--- a/app/src/main/res/layout/fragment_list_characters.xml
+++ b/app/src/main/res/layout/fragment_list_characters.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.emi.nwodcombat.combat.DynamicCombatFragment">
+    tools:context="com.emi.nwodcombat.characterlist.CharacterListFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabDoCombat"
+        android:id="@+id/fabNewCharacter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
