--- a/app/src/main/res/layout/row_character_name.xml
+++ b/app/src/main/res/layout/row_character_name.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/spacing_normal"
               android:layout_gravity="center">
-    <com.emi.nwodcombat.widgets.TypeFacedTextView
+    <TextView
         android:id="@+id/rowCharacterName"
         android:text="Name:"
         android:layout_marginRight="@dimen/spacing_normal"
