--- a/app/src/main/res/layout/widget_value_setter.xml
+++ b/app/src/main/res/layout/widget_value_setter.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginStart="@dimen/spacing_normal"
               android:layout_marginEnd="@dimen/spacing_normal"
-              android:gravity="center_vertical">
+              android:layout_marginStart="@dimen/spacing_normal"
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
 
     <TextView
         android:id="@+id/lblValue"
@@ -19,21 +19,28 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnValueDecrease"
-        android:layout_width="@dimen/btn_value_setter"
-        android:layout_height="@dimen/btn_value_setter"
-        android:text="@string/button_minus"
-        android:background="@drawable/fab_reject"/>
+    <LinearLayout
+        android:id="@+id/panelEdition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnValueIncrease"
-        android:layout_width="@dimen/btn_value_setter"
-        android:layout_height="@dimen/btn_value_setter"
-        android:text="@string/button_plus"
-        android:background="@drawable/fab_accept"/>
+        <Button
+            android:id="@+id/btnValueDecrease"
+            android:layout_width="@dimen/btn_value_setter"
+            android:layout_height="@dimen/btn_value_setter"
+            android:background="@drawable/fab_reject"
+            android:text="@string/button_minus"/>
+
+        <Button
+            android:id="@+id/btnValueIncrease"
+            android:layout_width="@dimen/btn_value_setter"
+            android:layout_height="@dimen/btn_value_setter"
+            android:background="@drawable/fab_accept"
+            android:text="@string/button_plus"/>
+    </LinearLayout>
 </LinearLayout>
