Minor fix to layout and methods.

--- a/app/src/main/res/layout/fragment_view_character_scroll.xml
+++ b/app/src/main/res/layout/fragment_view_character_scroll.xml
@@ -887,6 +887,7 @@
                         class="com.emi.nwodcombat.widgets.ValueSetterWidget"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        app:pointCost="@integer/cost_morality"
                         app:showEditionPanel="false"
                         app:traitCategory="@string/cat_derived"
                         app:valueDefault="1"
